fix: alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
 }
@@ -30,6 +30,7 @@ body {
     font-weight: 400;
     line-height: 2;
     color: black;
+    position: relative;
 }
   
 h1,
@@ -75,6 +76,7 @@ img {
     width: 100%;
     background: violet;
     z-index: 10;
+    overflow: auto;
 }
   
 .nav-list {
@@ -107,12 +109,17 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100vh;
     background-color: #000;
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    left: 0;
+    right: 0;
+    overflow: auto;
+    padding: 0 2rem;
 }
-  
+
 p {
     font-size: 3rem;
     font-weight: 200;
@@ -281,6 +288,13 @@ footer i {
     padding: 10rem 2rem;
     background-color: #000;
     background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+    display: center;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
   
 .blogs-section-header {
